Tinkering with appearancees: Stop popup text writing underneath scrollbar; tiny button colour changes; add minSharedNonOverlap option (not yet coded)

--- a/src/popup529.css
+++ b/src/popup529.css
@@ -1,8 +1,12 @@
 body{
     width: 800px;
+    max-width:fit-content;
 }
 
 H1 {
+	text-align: center;
+}
+H2 {
 	text-align: center;
 }
 
